// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots Report renders the report 1`] = `
<span>
  <li
    className="sc-bdVaJa dCwyQQ"
  >
    <button
      aria-label={null}
      disabled={undefined}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "background": "none",
          "backgroundColor": "unset",
          "border": "none",
          "borderRadius": "unset",
          "color": "unset",
          "cursor": "pointer",
          "display": "unset",
          "fontFamily": "unset",
          "fontSize": "unset",
          "fontWeight": "unset",
          "lineHeight": "unset",
          "margin": "unset",
          "outline": "none",
          "padding": 0,
          "transition": "unset",
          "width": "100%",
        }
      }
    >
      <span
        className="sc-bwzfXH kYzbBn"
      >
        <span
          style={
            Object {
              "color": "#59626a",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "1.25rem",
              "fontWeight": 700,
            }
          }
        >
          <span
            className="sc-htpNat byAsPi"
          >
            Weekly Sync Report
          </span>
        </span>
        <span
          style={
            Object {
              "color": "#59626a",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "1rem",
              "fontWeight": 400,
            }
          }
        >
          <span
            className="sc-bxivhb hlPYmz"
          >
            October 11, 2017
          </span>
        </span>
      </span>
    </button>
  </li>
</span>
`;

exports[`Snapshots ReportList loading state 1`] = `
<span>
  <span
    style={
      Object {
        "color": "#59626a",
        "fontFamily": "\\"Roboto\\", sans-serif",
        "fontSize": "1rem",
        "fontWeight": 400,
      }
    }
  >
    Loading...
  </span>
</span>
`;

exports[`Snapshots ReportList renders the reports collection in a list 1`] = `
<span>
  <ol
    className="sc-ifAKCX bAoxEZ"
  >
    <li
      className="sc-bdVaJa dCwyQQ"
    >
      <button
        aria-label={null}
        disabled={undefined}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "none",
            "backgroundColor": "unset",
            "border": "none",
            "borderRadius": "unset",
            "color": "unset",
            "cursor": "pointer",
            "display": "unset",
            "fontFamily": "unset",
            "fontSize": "unset",
            "fontWeight": "unset",
            "lineHeight": "unset",
            "margin": "unset",
            "outline": "none",
            "padding": 0,
            "transition": "unset",
            "width": "100%",
          }
        }
      >
        <span
          className="sc-bwzfXH kYzbBn"
        >
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1.25rem",
                "fontWeight": 700,
              }
            }
          >
            <span
              className="sc-htpNat byAsPi"
            >
              Weekly Sync Report
            </span>
          </span>
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1rem",
                "fontWeight": 400,
              }
            }
          >
            <span
              className="sc-bxivhb hlPYmz"
            >
              November 8, 2017
            </span>
          </span>
        </span>
      </button>
    </li>
    <li
      className="sc-bdVaJa dCwyQQ"
    >
      <button
        aria-label={null}
        disabled={undefined}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "none",
            "backgroundColor": "unset",
            "border": "none",
            "borderRadius": "unset",
            "color": "unset",
            "cursor": "pointer",
            "display": "unset",
            "fontFamily": "unset",
            "fontSize": "unset",
            "fontWeight": "unset",
            "lineHeight": "unset",
            "margin": "unset",
            "outline": "none",
            "padding": 0,
            "transition": "unset",
            "width": "100%",
          }
        }
      >
        <span
          className="sc-bwzfXH kYzbBn"
        >
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1.25rem",
                "fontWeight": 700,
              }
            }
          >
            <span
              className="sc-htpNat byAsPi"
            >
              Client Social Media Campaign
            </span>
          </span>
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1rem",
                "fontWeight": 400,
              }
            }
          >
            <span
              className="sc-bxivhb hlPYmz"
            >
              October 11, 2017
            </span>
          </span>
        </span>
      </button>
    </li>
  </ol>
</span>
`;
